compiler/plc_driver/src/tests/snapshots/plc_driver__tests__multi_files__multiple_files_in_different_locations_with_debug_info.snap
---
source: compiler/plc_driver/src/tests/multi_files.rs
expression: "results.join(\"\\n\")"
---
; ModuleID = 'app/file1.st'
source_filename = "app/file1.st"
target datalayout = "[filtered]"
target triple = "[filtered]"

%mainProg = type {}

@mainProg_instance = external global %mainProg

define i32 @main() !dbg !4 {
entry:
  %main = alloca i32, align [filtered]
    #dbg_declare(ptr %main, !8, !DIExpression(), !10)
  store i32 0, ptr %main, align [filtered]
  call void @mainProg(ptr @mainProg_instance), !dbg !11
  %main_ret = load i32, ptr %main, align [filtered], !dbg !12
  ret i32 %main_ret, !dbg !13
}

declare void @mainProg(ptr)

!llvm.module.flags = !{!0, !1}
!llvm.dbg.cu = !{!2}

!0 = !{i32 2, !"Dwarf Version", i32 5}
!1 = !{i32 2, !"Debug Info Version", i32 3}
!2 = distinct !DICompileUnit(language: DW_LANG_C, file: !3, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, splitDebugInlining: false)
!3 = !DIFile(filename: "app/file1.st", directory: "root")
!4 = distinct !DISubprogram(name: "main", linkageName: "main", scope: !3, file: !3, line: 2, type: !5, scopeLine: 10, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !2, retainedNodes: !7, keyInstructions: true)
!5 = !DISubroutineType(flags: DIFlagPublic, types: !6)
!6 = !{null}
!7 = !{}
!8 = !DILocalVariable(name: "main", scope: !4, file: !3, line: 2, type: !9, align [filtered])
!9 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!10 = !DILocation(line: 2, column: 13, scope: !4)
!11 = !DILocation(line: 10, column: 4, scope: !4, atomGroup: 1, atomRank: 1)
!12 = !DILocation(line: 11, column: 4, scope: !4)
!13 = !DILocation(line: 11, column: 4, scope: !4, atomGroup: 2, atomRank: 1)

; ModuleID = 'lib/file2.st'
source_filename = "lib/file2.st"
target datalayout = "[filtered]"
target triple = "[filtered]"

%mainProg = type {}

@mainProg_instance = global %mainProg zeroinitializer, !dbg !0

define void @mainProg(ptr %0) !dbg !9 {
entry:
    #dbg_declare(ptr %0, !12, !DIExpression(), !13)
  ret void, !dbg !14
}

!llvm.module.flags = !{!5, !6}
!llvm.dbg.cu = !{!7}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "mainProg", scope: !2, file: !2, line: 2, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "lib/file2.st", directory: "root")
!3 = !DICompositeType(tag: DW_TAG_structure_type, name: "mainProg", scope: !2, file: !2, line: 2, align [filtered], flags: DIFlagPublic, elements: !4, identifier: "mainProg")
!4 = !{}
!5 = !{i32 2, !"Dwarf Version", i32 5}
!6 = !{i32 2, !"Debug Info Version", i32 3}
!7 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, globals: !8, splitDebugInlining: false)
!8 = !{!0}
!9 = distinct !DISubprogram(name: "mainProg", linkageName: "mainProg", scope: !2, file: !2, line: 2, type: !10, scopeLine: 5, flags: DIFlagPublic, spFlags: DISPFlagDefinition, unit: !7, retainedNodes: !4, keyInstructions: true)
!10 = !DISubroutineType(flags: DIFlagPublic, types: !11)
!11 = !{null, !3}
!12 = !DILocalVariable(name: "mainProg", scope: !9, file: !2, line: 5, type: !3)
!13 = !DILocation(line: 5, column: 4, scope: !9)
!14 = !DILocation(line: 5, column: 4, scope: !9, atomGroup: 1, atomRank: 1)
